--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             <input id="colorPicker" type="color" value="#333333">
             <button id="colorBtn">Pen</button>
             <button id="rainbowBtn">Rainbow Mode</button>
+            <button id="eraserBtn">Eraser</button>
             <button id="resetBtn">Reset</button>
             <div id="sizeValue" class="size-value">16 x 16</div>
-            <input id="sizeSlider" type="range" value="16" min="1" max="64">
+            <input id="sizeSlider" type="range" value="16" min="1" max="100">
         </div>
-        <div class="container"></div>
+        <div id="container" class="container"></div>
         <script src="script.js"></script>
     </main>
 </body>
