Add a Keyboard Input element 2

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 class="title">Etch-a-sketch</h1>
 </header>
 <body>
+    <h1><kbd>Left-Click</kbd> to Draw!</h1>
     <main class="main">
         <div class="settings">
             <input id="colorPicker" type="color" value="#333333">
